# C-RAT

./: CMakeLists.txt  README.md  cmake.bat
src/: client.cpp  common_funcs.cpp  common_funcs.h  payload.cpp  payload.h  server.cpp
